# mor

./: .gitignore  README.md  about prod.md  initial prompt.md  pyproject.toml
docs/: architecture.md  ontology-format.md
docs/images/: mor.code-workspace
examples/: benchmark_cases.json
examples/evals/: README.md  paint-v2-eval.json
examples/marketing/: README.md  benchmark_cases.json
ontology/marketing/V1/: attribution-model.md  audience-segmentation.md  buyer-persona.md  campaign-management.md  campaign-measurement.md  content-calendar.md  conversion-funnel.md  creative-brief.md  email-nurture.md  lead-qualification.md  marketing-operations.md  ontology.json  search-advertising.md
ontology/paint-manufacturing/V3/: finished-goods-warehouse.md  imported-product.md  ontology.json  plant.md  product.md  production-line.md  raw-material-warehouse.md  raw-material.md  regional-depot.md  retailer.md  supplier.md  warehouse.md
ontology/paint/V1/: acrylic-resin.md  additive.md  alkyd-resin.md  anti-foaming-agent.md  automotive-paint.md  batch.md  coating.md  color-pigment.md  color.md  dispersant.md  dry-time.md  drying-agent.md  durability.md  emulsion-paint.md  epoxy-resin.md  extender-pigment.md  gloss.md  (+37 more)
ontology/structure/: markdown-concept-v1.json  markdown-concept-v2.json  readme.md
src/mor/: __init__.py  __main__.py  api.py  cli.py  constants.py  explorer.py  explorer_app.py  explorer_data.py  langfuse_eval.py  mcp.py  models.py  parser.py  registry.py  runtime.py  utils.py  validator.py
tests/: test_api.py  test_cli.py  test_explorer_data.py  test_langfuse_eval.py  test_mcp.py  test_parser.py  test_runtime.py  test_validator.py
